* 2007-08-08 - marcus.klein@open-xchange.com

 - Bugfix 8720: Added invalidation for context login information mappings.
 - Finished generic config jump.

* 2007-08-08 - thorben.betten@open-xchange.com

 - Additional monitoring info in AJP monitor to count number of processed
   requests for throughput accounting purpose
 - Bugfix #8716: Fixed composing JSON response if multiple request element
   does not contain a timestamp value

* 2007-08-07 - thorben.betten@open-xchange.com

 - Fixed bug when requesting messages from several folders via PUT on mail
   servlet with action=list
 - Some changes to improve display of messages
 - Including inline images on reply/forward

* 2007-08-07 - francisco.laguna@open-xchange.com

 - Added license to classes.
 - Bugfix #8622: Provide overridability for url encoding in propfind responses.

* 2007-08-06 - marcus.klein@open-xchange.com

 - Implemented generic config jump.

* 2007-08-06 - martin.kauss@open-xchange.com

 - Documented calendar.properties options and parameters.   

 - Fixed bug #8510. Creating an recurring exception and setting a reminder
   for the exception exchanged the reminder from the recurring appointment
   and the exception. This has been fixed.

* 2007-08-06 - thorben.betten@open-xchange.com

 - Fixed JSON error when deleting appointment through multiple servlet
 - Refactored UserConfiguration: UserSettingMail reference moved to
   SessionObject
 - UserSettingMailStorage class for typical storage operatinos (save, load
   & delete)
 - Added cache for user's mail settings (according to other existing storage
   classes)
 - Refactored UserSettingMail: SessionObject no more holds a reference to
   an instance of UserSettingMail rather than fetching a cached instance on
   SessionObject.getUserSettingMail() invokations.
 - Added error codes to DeletionFailedException (extends AbstractOXException)

* 2007-08-03 - thorben.betten@open-xchange.com

 - Fixed forwarding of messages with inline images